2019-06-18  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-14.4 / 10.0) for FM19 
        for sideband leakage testing.

2019-06-17  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-10.7 / 10.0) for FM19 
        for sideband leakage testing.

2019-06-16  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-11.3 / 10.0) for FM19 
        for sideband leakage testing.

2019-06-07  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-11 / 10.0) for FM19 
	for sideband leakage testing.

2019-05-21  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-14.4 / 10.0) for FM19 
	for sideband leakage testing.

2019-05-21  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-11 / 10.0) for FM19 
	for sideband leakage testing.

2019-05-21  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-11.3 / 10.0) for FM19 
	for sideband leakage testing.

2019-05-17  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-10.7 / 10.0) for FM19 
	for sideband leakage testing.

2019-05-17  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-11.3 / 10.0) for FM19 
	for sideband leakage testing.

2019-05-17  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-11 / 10.0) for FM19 
	for sideband leakage testing.
